<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (c) 2017, GoMint, BlackyPaw and geNAZt
  ~
  ~ This code is licensed under the BSD license found in the
  ~ LICENSE file in the root directory of this source tree.
  -->
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.gomint</groupId>
    <artifactId>gomint</artifactId>
    <packaging>pom</packaging>
    <version>1.0.0-SNAPSHOT</version>

    <issueManagement>
        <url>https://github.com/GoMint/GoMint/issues</url>
        <system>GitHub Issues</system>
    </issueManagement>

    <scm>
        <url>https://github.com/GoMint/GoMint</url>
        <connection>scm:git:git://github.com/GoMint/GoMint.git</connection>
        <developerConnection>scm:git:git@github.com:GoMint/GoMint.git</developerConnection>
    </scm>

    <modules>
        <module>gomint-api</module>
        <module>gomint-server</module>
        <module>gomint-test-plugin</module>
        <module>gomint-performance-viewer</module>
        <module>gomint-native</module>
        <module>gomint-emulator</module>
        <module>gomint-asset-compiler</module>
        <module>gomint-converter</module>
        <module>gomint-safeexec</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <repository>
            <id>gomint-repo</id>
            <name>GoMint Public Repository</name>
            <url>https://repo.gomint.io/content/groups/public/</url>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>gomint-releases</id>
            <url>https://repo.gomint.io/content/repositories/releases/</url>
        </repository>
        <snapshotRepository>
            <id>gomint-snapshots</id>
            <url>https://repo.gomint.io/content/repositories/snapshots/</url>
        </snapshotRepository>
    </distributionManagement>

    <dependencies>
        <dependency>
            <groupId>it.unimi.dsi</groupId>
            <artifactId>fastutil</artifactId>
            <version>8.2.2</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.4</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>11</release>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.4</version>
                        </path>
                    </annotationProcessorPaths>
                    <!-- this helps when getting error: file should be on source path, or on patch path for module -->
                    <compilerArgs>
                        <arg>-sourcepath</arg>
                        <arg>${project.basedir}/src/main/java${path.separator}${project.basedir}/target/generated-sources/annotations${path.separator}/</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
